DZ_5/service-remine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-redmine
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
